# ed-lore

./: .gitignore  AGENTS.md  CLAUDE.md  DAILY_PROMPT.md  README.md  atom.xml  duplicate_entities.txt  enrich.py  enrich_3301_09.py  fetch.py  manifest.json  missing_from_archive.txt  orphan_entities.txt  prompt.md  pyproject.toml  rss.xml
.github/workflows/: audio-generation.yml  deploy.yml
.kimi/prompts/: fetch-enrich-deploy.md
Entities/: ENRICHMENT_PROGRESS.md
Entities/Arcs/: aisling-reform-movement.md  alliance-expansion.md  antares-mystery.md  banki-liberation.md  banki-rebellion.md  barnacle-meta-alloy.md  blight.md  cayutorme-conflict.md  cerberus-plague.md  corporate-history.md  distant-worlds-3.md  falisci-conflict.md  federal-politics.md  (+39 more)
_astro/: AppShell.PkaXOgHs.js
scripts/: add_arc_hierarchy.py  add_bidirectional_links.py  audio_manifest.json  audit_api_vs_archive.py  audit_arcs_and_uuids.py  build_graph.py  cleanup_inara_links.py  delete_garbage_entities.py  delete_orphan_entities.py  enrich.py  enrich_bodies_edsm.py  enrich_entities_with_links.py  enrich_locations_from_edsm.py  enrich_stations_edsm.py  enrich_systems_edsm.py  entity_cleanup.py  fetch.py  fix_orphan_related_uuids.py  fix_yaml_issues.py  format_articles.py  generate_audio.py  generate_audio_local.py  generate_entity_bios.py  merge_duplicates.py  merge_tiny_arcs.py  normalize_locations.py  populate_related_uuids.py  prep_batch.py  remove_garbage_persons.py  remove_wikilinks.py  sync_audio_to_r2.py  validate_enrichment.py
website/: astro.config.mjs  package.json  pnpm-lock.yaml
(+13026 files in other folders)
